
Commands:
 * look now takes an /opaque switch, which hides contents listings. Suggested
   by Wiggles. [MG]

Functions:
 * colors() returns a list of all known color names known by PennMUSH, and
   info about a particular color. [GM]
 * valid() has two new categories, for validating color names and color code
   sequences for ansi(). [MG]

Minor changes:
 * The meaning of the COLOR flag has been restored. ANSI flag once again 
   means only highlight is supported, while COLOR means all ANSI 8 colors
   (8*2 including highlight), flash, invert, etc are supported. [GM]
 * Charset negotiation didn't work on MSVC, and now forces iso-8859-1 when
   compiled that way instead. Reported by Daniel Powell. [MG]
 * @config/set and @config/save now log to the wizard_log. Suggested by
   Israphel. [MG]
 * The ICLOC attribute, which was set on newly created players but never used
   in any way, is no longer set. Suggested by Paige. [MG]
 * @destroy'ing, @undestroy'ing, and the actual destruction of players is
   now logged. Suggested by Padraic. [MG]
 * Translation fixes by Stoko.
 * round(4.5,0) behaved differently on Penn than it did on MUX, and
   inconsistantly with rounding to more places on Penn. [SW]
 * The 'On for' and 'Idle' time fields in WHO are smarter and won't overflow
   their space. Suggested by Ari and Paige. [SW]   

Fixes:
 * Reordered some checks in tz.c to compile on more distributions. Problem
   reported by Zen@M*U*SH. [MG]
 * Setting an exit Transparent didn't cause its destination's desc to get
   shown as it should have. [MG]
 * It became impossible in p1 to give a delimiter to wrap() without also
   specifying a first line width. wrap(%0,%1,,%2) will now use the
   normal <width> arg for first line width, the same as wrap(%0,%1) does.
   Reported by Kitai. [MG]
 * Free PCRE-allocated memory with pcre_free() instead of free(). Reported
   by ChaosMageX@M*U*S*H. [DC]            
 * Fix some potential memory leaks in timezone file reading code. [SW]
